# GameEngine

./: .gitignore  CMakeLists.txt  imgui.ini
Engine/include/Engine/: ScriptManager.h  TextureManager.h  TierScript.h
Engine/include/Engine/ECS/: Components.h  Entity.h  Scene.h  Systems.h
Engine/src/Engine/: AudioManager.cpp  Entity.cpp  ScriptManager.cpp  TextureManager.cpp  TierScript.cpp
Engine/src/Engine/ECS/: Scene.cpp  Systems.cpp
Game/include/Game/: GameplayScene.h
Game/src/Game/: GameplayScene.cpp  main.cpp
assets/: scene.json  scene2.json
assets/scripts/: flap.lua  hierarchy_test.lua  pipe_scroll.lua
assets/scripts/Entities/: flap.lua  hierarchy_test.lua  pipe_scroll.lua
assets/scripts/Game/: main_game.lua
assets/scripts/Scenes/: main_scene.lua
assets/scripts/game/: main_game.lua
assets/scripts/scene/: scene2_scene.lua
include/: AudioManager.h  Entity.h  GameplayScene.h  Scene.h
src/: AudioManager.cpp  Entity.cpp  GameplayScene.cpp  main.cpp
